before test