@@ -48,22 +48,22 @@ import com.google.inject.TypeLiteral;
  * @author Zack Shoylev
  */
 
-@Test(groups = "unit", testName = "ParseBucketTest")
-public class ParseBucketListTest extends BaseHandlerTest {
-	
-	protected final DateService dateService = new SimpleDateFormatDateService();
-
-	public void test() {
-	      InputStream is = getClass().getResourceAsStream("/bucket_list.xml");
-
-	      FluentIterable<Bucket> expected = expected();
-
-	      DescribeTagsResponseHandler handler = injector.getInstance(DescribeTagsResponseHandler.class);
-	      FluentIterable<Bucket> result = factory.create(handler).parse(is);
-
-	      assertEquals(result.toString(), expected.toString());
-
-	   }
+//@Test(groups = "unit", testName = "ParseBucketTest")
+//public class ParseBucketListTest extends BaseHandlerTest {
+//	
+//	protected final DateService dateService = new SimpleDateFormatDateService();
+//
+//	public void test() {
+//	      InputStream is = getClass().getResourceAsStream("/bucket_list.xml");
+//
+//	      FluentIterable<Bucket> expected = expected();
+//
+//	      DescribeTagsResponseHandler handler = injector.getInstance(DescribeTagsResponseHandler.class);
+//	      FluentIterable<Bucket> result = factory.create(handler).parse(is);
+//
+//	      assertEquals(result.toString(), expected.toString());
+//
+//	   }
 	
 //	public FluentIterable<Bucket> expected() {
 //	      return FluentIterable.from(ImmutableSet.<Bucket>builder()
@@ -91,61 +91,61 @@ public class ParseBucketListTest extends BaseHandlerTest {
 //	                       .build()).build());
 //	   }
 
-   public Set<Bucket> expected() {
-     return ImmutableSet
-            .of(Bucket.builder()
-                  .name("coopis")
-                  .maxkey(1000)
-                  .isTruncated(false)
-                  .contents(List.of(
-                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/1").build() ),
-                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/1").build() )
-                          ))
-                  .build(),
-                  Bucket.builder()
-                  .id(2)
-                  .name("1GB Instance")
-                  .ram(1024)
-                  .links(ImmutableList.of(
-                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/2").build() ),
-                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/2").build() )
-                          ))
-                  .build(),
-                  Bucket.builder()
-                  .id(3)
-                  .name("2GB Instance")
-                  .ram(2048)
-                  .links(ImmutableList.of(
-                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/3").build() ),
-                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/3").build() )
-                          ))
-                  .build(),
-                  Bucket.builder()
-                  .id(4)
-                  .name("4GB Instance")
-                  .ram(4096)
-                  .links(ImmutableList.of(
-                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/4").build() ),
-                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/4").build() )
-                         ))
-                  .build(),
-                  Bucket.builder()
-                  .id(5)
-                  .name("8GB Instance")
-                  .ram(8192)
-                  .links(ImmutableList.of(
-                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/5").build() ),
-                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/5").build() )
-                          ))
-                  .build(),
-                  Bucket.builder()
-                  .id(6)
-                  .name("16GB Instance")
-                  .ram(16384)
-                  .links(ImmutableList.of(
-                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/6").build() ),
-                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/6").build() )
-                          ))
-                  .build());
-   }
-}
+//   public Set<Bucket> expected() {
+//     return ImmutableSet
+//            .of(Bucket.builder()
+//                  .name("coopis")
+//                  .maxkey(1000)
+//                  .isTruncated(false)
+//                  .contents(List.of(
+//                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/1").build() ),
+//                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/1").build() )
+//                          ))
+//                  .build(),
+//                  Bucket.builder()
+//                  .id(2)
+//                  .name("1GB Instance")
+//                  .ram(1024)
+//                  .links(ImmutableList.of(
+//                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/2").build() ),
+//                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/2").build() )
+//                          ))
+//                  .build(),
+//                  Bucket.builder()
+//                  .id(3)
+//                  .name("2GB Instance")
+//                  .ram(2048)
+//                  .links(ImmutableList.of(
+//                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/3").build() ),
+//                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/3").build() )
+//                          ))
+//                  .build(),
+//                  Bucket.builder()
+//                  .id(4)
+//                  .name("4GB Instance")
+//                  .ram(4096)
+//                  .links(ImmutableList.of(
+//                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/4").build() ),
+//                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/4").build() )
+//                         ))
+//                  .build(),
+//                  Bucket.builder()
+//                  .id(5)
+//                  .name("8GB Instance")
+//                  .ram(8192)
+//                  .links(ImmutableList.of(
+//                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/5").build() ),
+//                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/5").build() )
+//                          ))
+//                  .build(),
+//                  Bucket.builder()
+//                  .id(6)
+//                  .name("16GB Instance")
+//                  .ram(16384)
+//                  .links(ImmutableList.of(
+//                          Link.create(Relation.SELF, Uris.uriBuilder("https://localhost:8778/v1.0/811050/flavors/6").build() ),
+//                          Link.create(Relation.BOOKMARK, Uris.uriBuilder("https://localhost:8778/flavors/6").build() )
+//                          ))
+//                  .build());
+//   }
+//}
